Multiple Part Tags, UUID Seeding, Pitch/Yaw/Pivot